# university-managment

./: .gitignore  README.md  agent.py  alembic.ini  chainlit.yaml  example.env  memory.json  my_mcp.py  pyproject.toml
.chainlit/: config.toml
alembic/: env.py
alembic/versions/: 1412e3f7ee31_upgrade.py  1967449dbcba_upgrade.py  276f4e8e99ab_create_tanles.py  2903eccad21c_create_tanles.py  2b6dd87071ec_set_exam_colm.py  2d7b2fe49c6e_upgrade.py  3087e9e9e45e_remove_table.py  32012ebdf1d0_fix_associations_imports.py  49fd4f998c01_add.py  6a4095a46a37_migration_name.py  7d53e8dfcb34_set_exam_colm.py  87c8dc765282_error.py  941fc76f5242_create_tanles.py  949336b6a787_colum_and_table_chage.py  97abbed187bd_fix_models.py  a258d32f7caa_hh.py  a67f7e10c1ee_add.py  c3e6da0db5b4_change.py  e0c656f39962_exam_tye.py  e5a3dea0e16b_add_association_tables.py  e75103ff0fef_fix_models.py  eb658fd6e402_upgrade.py  f30d6971f36b_fix_associations_imports.py  f9807aa17e5e_restore_association_tables.py
ums-frontend/: package-lock.json  package.json  tailwind.config.js
ums-frontend/src/: App.js  index.css
uni/: main.py
uni/database/: connection.py
uni/logics/: batches_logic.py  departments_logics.py  results_logics.py  students_logics.py  subjects_logics.py  teachers_logics.py  users_logics.py
uni/models/: __init__.py  assosiations.py  batches_table.py  departments_table.py  results_table.py  students_table.py  subjects_table.py  teachers_table.py  users_table.py
uni/routes/: batches_routes.py  departments_routes.py  results_routes.py  students_routes.py  subjects_routes.py  (+2 more)
(+25 files in other folders)
